Almost done with logistic regression. Gradient remaining

--- a/Offline 1/logistic_regression.ipynb
+++ b/Offline 1/logistic_regression.ipynb
@@ -9,8 +9,7 @@
    "outputs": [],
    "source": [
     "#imports\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import numpy as np"
    ]
   },
   {
@@ -31,42 +30,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# loss function\n",
+    "def loss(h, y, size):\n",
+    "    error = np.sum((y-h) ** 2)\n",
+    "    return error"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "def train():\n",
+    "# training function\n",
+    "def train(x, y, early_terminate_threshold=0.0, learning_rate=0.05, no_of_iterations=5000):\n",
+    "    no_of_data, no_of_features = x.size\n",
+    "    w = np.zeros(no_of_features)\n",
+    "    for i in range(no_of_iterations):\n",
+    "        z = np.dot(x, w)\n",
+    "        h = tanh_function(z)\n",
+    "        error = loss(h, y, no_of_data)\n",
+    "        if error < early_terminate_threshold:\n",
+    "            return w\n",
+    "        gradient = 1\n",
+    "        w += learning_rate * gradient\n",
     "\n",
-    "    pass"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "def validate():\n",
-    "    pass"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "def predict():\n",
-    "    pass"
+    "    return w"
    ],
    "metadata": {
     "collapsed": false,
