Working on preprocessor-1

--- a/Offline 1/logistic_regression.ipynb
+++ b/Offline 1/logistic_regression.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "# loss function\n",
-    "def loss(h, y, size):\n",
+    "def loss(h, y):\n",
     "    error = np.sum((y-h) ** 2)\n",
     "    return error"
    ],
@@ -57,13 +57,28 @@
     "    for i in range(no_of_iterations):\n",
     "        z = np.dot(x, w)\n",
     "        h = tanh_function(z)\n",
-    "        error = loss(h, y, no_of_data)\n",
+    "        error = loss(h, y)\n",
     "        if error < early_terminate_threshold:\n",
     "            return w\n",
-    "        gradient = 1\n",
+    "        gradient = (y - h) * (1 - h ** 2) * x\n",
     "        w += learning_rate * gradient\n",
     "\n",
     "    return w"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def logistic_regression(max_parameters_to_use=100):\n",
+    "    pass"
    ],
    "metadata": {
     "collapsed": false,
