--- a/Offline 1/preprocessor-1.ipynb
+++ b/Offline 1/preprocessor-1.ipynb
@@ -2,20 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports\n",
     "import pandas as pd\n",
     "from IPython.display import display\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn import preprocessing"
+    "from sklearn.preprocessing import MinMaxScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 149,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# One-hot encode\n",
+    "def encode_and_bind(original_dataframe, feature_to_encode):\n",
+    "    dummies = pd.get_dummies(original_dataframe[[feature_to_encode]])\n",
+    "    res = pd.concat([original_dataframe, dummies], axis=1)\n",
+    "    res = res.drop([feature_to_encode], axis=1)\n",
+    "    return res\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -30,6 +48,13 @@
     "                             'Partner': lambda x: int(x == 'Yes'),\n",
     "                             'Dependents': lambda x: int(x == 'Yes'),\n",
     "                             'PhoneService': lambda x: int(x =='Yes'),\n",
+    "                             'MultipleLines': lambda x: int(x == 'Yes'),\n",
+    "                             'OnlineSecurity': lambda x: int(x == 'Yes'),\n",
+    "                             'OnlineBackup': lambda x: int(x == 'Yes'),\n",
+    "                             'DeviceProtection': lambda x: int(x == 'Yes'),\n",
+    "                             'TechSupport': lambda x: int(x == 'Yes'),\n",
+    "                             'StreamingTV': lambda x: int(x == 'Yes'),\n",
+    "                             'StreamingMovies': lambda x: int(x == 'Yes'),\n",
     "                             'PaperlessBilling': lambda x: int(x =='Yes'),\n",
     "                             'Churn': lambda x: int(x =='Yes'),\n",
     "                             'MonthlyCharges': lambda x: float(x)\n",
@@ -38,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 151,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -57,13 +82,22 @@
     "totalChargesMedian = (telco_data['TotalCharges'].loc[telco_data['TotalCharges'] != ' ']).median()\n",
     "telco_data['TotalCharges'].replace([' '], totalChargesMedian, regex=True, inplace=True)\n",
     "\n",
-    "telco_data['tenure'] = (telco_data['tenure'] - telco_data['tenure'].min()) / (telco_data['tenure'].max() - telco_data['tenure'].min())\n",
-    "telco_data['MonthlyCharges'] = (telco_data['MonthlyCharges'] - telco_data['MonthlyCharges'].min()) / (telco_data['MonthlyCharges'].max() - telco_data['MonthlyCharges'].min())"
+    "columns_to_encode = ['InternetService', 'Contract', 'PaymentMethod']\n",
+    "for column in columns_to_encode:\n",
+    "    telco_data = encode_and_bind(telco_data, column)\n",
+    "\n",
+    "telco_data.InternetService_No = telco_data.InternetService_DSL + telco_data['InternetService_Fiber optic']\n",
+    "\n",
+    "# Move final column for better visualization\n",
+    "telco_data.insert(len(telco_data.columns)-1, 'Churn', telco_data.pop('Churn'))\n",
+    "\n",
+    "all_columns = list(telco_data.columns)\n",
+    "telco_data[all_columns] = MinMaxScaler().fit_transform(telco_data[all_columns])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 152,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -98,18 +132,19 @@
        "      <th>tenure</th>\n",
        "      <th>PhoneService</th>\n",
        "      <th>MultipleLines</th>\n",
-       "      <th>InternetService</th>\n",
        "      <th>OnlineSecurity</th>\n",
        "      <th>OnlineBackup</th>\n",
        "      <th>DeviceProtection</th>\n",
-       "      <th>TechSupport</th>\n",
-       "      <th>StreamingTV</th>\n",
-       "      <th>StreamingMovies</th>\n",
-       "      <th>Contract</th>\n",
-       "      <th>PaperlessBilling</th>\n",
-       "      <th>PaymentMethod</th>\n",
-       "      <th>MonthlyCharges</th>\n",
-       "      <th>TotalCharges</th>\n",
+       "      <th>...</th>\n",
+       "      <th>InternetService_Fiber optic</th>\n",
+       "      <th>InternetService_No</th>\n",
+       "      <th>Contract_Month-to-month</th>\n",
+       "      <th>Contract_One year</th>\n",
+       "      <th>Contract_Two year</th>\n",
+       "      <th>PaymentMethod_Bank transfer (automatic)</th>\n",
+       "      <th>PaymentMethod_Credit card (automatic)</th>\n",
+       "      <th>PaymentMethod_Electronic check</th>\n",
+       "      <th>PaymentMethod_Mailed check</th>\n",
        "      <th>Churn</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -122,19 +157,20 @@
        "      <td>0</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>DSL</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Two year</td>\n",
        "      <td>1</td>\n",
-       "      <td>Bank transfer (automatic)</td>\n",
-       "      <td>0.700000</td>\n",
-       "      <td>6201.95</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -145,19 +181,20 @@
        "      <td>1</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0</td>\n",
-       "      <td>No phone service</td>\n",
-       "      <td>DSL</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Two year</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>Bank transfer (automatic)</td>\n",
-       "      <td>0.341294</td>\n",
-       "      <td>1397.475</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -168,19 +205,20 @@
        "      <td>1</td>\n",
        "      <td>0.013889</td>\n",
        "      <td>1</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Fiber optic</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Month-to-month</td>\n",
        "      <td>1</td>\n",
-       "      <td>Electronic check</td>\n",
-       "      <td>0.558209</td>\n",
-       "      <td>74.35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -191,19 +229,20 @@
        "      <td>1</td>\n",
        "      <td>0.875000</td>\n",
        "      <td>1</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Fiber optic</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Two year</td>\n",
        "      <td>1</td>\n",
-       "      <td>Bank transfer (automatic)</td>\n",
-       "      <td>0.861194</td>\n",
-       "      <td>6597.25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -214,19 +253,20 @@
        "      <td>0</td>\n",
        "      <td>0.027778</td>\n",
        "      <td>1</td>\n",
-       "      <td>No</td>\n",
-       "      <td>DSL</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Month-to-month</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>Electronic check</td>\n",
-       "      <td>0.405473</td>\n",
-       "      <td>114.15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -237,19 +277,20 @@
        "      <td>0</td>\n",
        "      <td>0.027778</td>\n",
        "      <td>1</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Fiber optic</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Month-to-month</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>Electronic check</td>\n",
-       "      <td>0.558706</td>\n",
-       "      <td>139.4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -260,23 +301,25 @@
        "      <td>0</td>\n",
        "      <td>0.847222</td>\n",
        "      <td>1</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>DSL</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>One year</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>Bank transfer (automatic)</td>\n",
-       "      <td>0.455721</td>\n",
-       "      <td>3902.6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>7 rows × 27 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -289,41 +332,61 @@
        "492       1              0        1           0  0.027778             1   \n",
        "493       0              1        1           0  0.847222             1   \n",
        "\n",
-       "        MultipleLines InternetService OnlineSecurity OnlineBackup  \\\n",
-       "487               Yes             DSL             No          Yes   \n",
-       "488  No phone service             DSL            Yes           No   \n",
-       "489               Yes     Fiber optic             No           No   \n",
-       "490               Yes     Fiber optic             No          Yes   \n",
-       "491                No             DSL             No          Yes   \n",
-       "492                No     Fiber optic            Yes           No   \n",
-       "493               Yes             DSL             No          Yes   \n",
+       "     MultipleLines  OnlineSecurity  OnlineBackup  DeviceProtection  ...  \\\n",
+       "487              1               0             1                 1  ...   \n",
+       "488              0               1             0                 1  ...   \n",
+       "489              1               0             0                 0  ...   \n",
+       "490              1               0             1                 1  ...   \n",
+       "491              0               0             1                 0  ...   \n",
+       "492              0               1             0                 0  ...   \n",
+       "493              1               0             1                 0  ...   \n",
        "\n",
-       "    DeviceProtection TechSupport StreamingTV StreamingMovies        Contract  \\\n",
-       "487              Yes         Yes         Yes             Yes        Two year   \n",
-       "488              Yes         Yes         Yes              No        Two year   \n",
-       "489               No          No          No              No  Month-to-month   \n",
-       "490              Yes          No         Yes             Yes        Two year   \n",
-       "491               No          No         Yes              No  Month-to-month   \n",
-       "492               No          No          No              No  Month-to-month   \n",
-       "493               No          No          No             Yes        One year   \n",
+       "     InternetService_Fiber optic  InternetService_No  Contract_Month-to-month  \\\n",
+       "487                            0                   1                        0   \n",
+       "488                            0                   1                        0   \n",
+       "489                            1                   1                        1   \n",
+       "490                            1                   1                        0   \n",
+       "491                            0                   1                        1   \n",
+       "492                            1                   1                        1   \n",
+       "493                            0                   1                        0   \n",
        "\n",
-       "     PaperlessBilling              PaymentMethod  MonthlyCharges TotalCharges  \\\n",
-       "487                 1  Bank transfer (automatic)        0.700000      6201.95   \n",
-       "488                 1  Bank transfer (automatic)        0.341294     1397.475   \n",
-       "489                 1           Electronic check        0.558209        74.35   \n",
-       "490                 1  Bank transfer (automatic)        0.861194      6597.25   \n",
-       "491                 1           Electronic check        0.405473       114.15   \n",
-       "492                 1           Electronic check        0.558706        139.4   \n",
-       "493                 0  Bank transfer (automatic)        0.455721       3902.6   \n",
+       "     Contract_One year  Contract_Two year  \\\n",
+       "487                  0                  1   \n",
+       "488                  0                  1   \n",
+       "489                  0                  0   \n",
+       "490                  0                  1   \n",
+       "491                  0                  0   \n",
+       "492                  0                  0   \n",
+       "493                  1                  0   \n",
        "\n",
-       "     Churn  \n",
-       "487      0  \n",
-       "488      0  \n",
-       "489      1  \n",
-       "490      0  \n",
-       "491      0  \n",
-       "492      1  \n",
-       "493      0  "
+       "     PaymentMethod_Bank transfer (automatic)  \\\n",
+       "487                                        1   \n",
+       "488                                        1   \n",
+       "489                                        0   \n",
+       "490                                        1   \n",
+       "491                                        0   \n",
+       "492                                        0   \n",
+       "493                                        1   \n",
+       "\n",
+       "     PaymentMethod_Credit card (automatic)  PaymentMethod_Electronic check  \\\n",
+       "487                                      0                               0   \n",
+       "488                                      0                               0   \n",
+       "489                                      0                               1   \n",
+       "490                                      0                               0   \n",
+       "491                                      0                               1   \n",
+       "492                                      0                               1   \n",
+       "493                                      0                               0   \n",
+       "\n",
+       "     PaymentMethod_Mailed check  Churn  \n",
+       "487                           0      0  \n",
+       "488                           0      0  \n",
+       "489                           0      1  \n",
+       "490                           0      0  \n",
+       "491                           0      0  \n",
+       "492                           0      1  \n",
+       "493                           0      0  \n",
+       "\n",
+       "[7 rows x 27 columns]"
       ]
      },
      "metadata": {},
@@ -331,24 +394,29 @@
     }
    ],
    "source": [
-    "display(telco_data.iloc[487:494, :])\n"
+    "display(telco_data.iloc[487:494, :])\n",
+    "telco_data.to_csv('telco.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "metadata": {},
+   "execution_count": 153,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(7043, 20)\n"
+      "(7043, 27)\n"
      ]
     }
    ],
    "source": [
-    "print(telco_data.shape)"
+    "print(telco_data.shape)\n"
    ]
   },
   {
