Preprocessing-1 finished. Working on preprocessing-2

--- a/Offline 1/preprocessor-1.ipynb
+++ b/Offline 1/preprocessor-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 176,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 177,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 178,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 179,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -151,171 +151,171 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>487</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>488</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>489</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.013889</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>490</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.875000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>491</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.027778</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>492</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.027778</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>493</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.847222</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -324,67 +324,67 @@
       ],
       "text/plain": [
        "     gender  SeniorCitizen  Partner  Dependents    tenure  PhoneService  \\\n",
-       "487       0              0        0           0  1.000000             1   \n",
-       "488       1              0        1           1  0.000000             0   \n",
-       "489       0              0        0           1  0.013889             1   \n",
-       "490       0              0        1           1  0.875000             1   \n",
-       "491       1              0        0           0  0.027778             1   \n",
-       "492       1              0        1           0  0.027778             1   \n",
-       "493       0              1        1           0  0.847222             1   \n",
+       "487     0.0            0.0      0.0         0.0  1.000000           1.0   \n",
+       "488     1.0            0.0      1.0         1.0  0.000000           0.0   \n",
+       "489     0.0            0.0      0.0         1.0  0.013889           1.0   \n",
+       "490     0.0            0.0      1.0         1.0  0.875000           1.0   \n",
+       "491     1.0            0.0      0.0         0.0  0.027778           1.0   \n",
+       "492     1.0            0.0      1.0         0.0  0.027778           1.0   \n",
+       "493     0.0            1.0      1.0         0.0  0.847222           1.0   \n",
        "\n",
        "     MultipleLines  OnlineSecurity  OnlineBackup  DeviceProtection  ...  \\\n",
-       "487              1               0             1                 1  ...   \n",
-       "488              0               1             0                 1  ...   \n",
-       "489              1               0             0                 0  ...   \n",
-       "490              1               0             1                 1  ...   \n",
-       "491              0               0             1                 0  ...   \n",
-       "492              0               1             0                 0  ...   \n",
-       "493              1               0             1                 0  ...   \n",
+       "487            1.0             0.0           1.0               1.0  ...   \n",
+       "488            0.0             1.0           0.0               1.0  ...   \n",
+       "489            1.0             0.0           0.0               0.0  ...   \n",
+       "490            1.0             0.0           1.0               1.0  ...   \n",
+       "491            0.0             0.0           1.0               0.0  ...   \n",
+       "492            0.0             1.0           0.0               0.0  ...   \n",
+       "493            1.0             0.0           1.0               0.0  ...   \n",
        "\n",
        "     InternetService_Fiber optic  InternetService_No  Contract_Month-to-month  \\\n",
-       "487                            0                   1                        0   \n",
-       "488                            0                   1                        0   \n",
-       "489                            1                   1                        1   \n",
-       "490                            1                   1                        0   \n",
-       "491                            0                   1                        1   \n",
-       "492                            1                   1                        1   \n",
-       "493                            0                   1                        0   \n",
+       "487                          0.0                 1.0                      0.0   \n",
+       "488                          0.0                 1.0                      0.0   \n",
+       "489                          1.0                 1.0                      1.0   \n",
+       "490                          1.0                 1.0                      0.0   \n",
+       "491                          0.0                 1.0                      1.0   \n",
+       "492                          1.0                 1.0                      1.0   \n",
+       "493                          0.0                 1.0                      0.0   \n",
        "\n",
        "     Contract_One year  Contract_Two year  \\\n",
-       "487                  0                  1   \n",
-       "488                  0                  1   \n",
-       "489                  0                  0   \n",
-       "490                  0                  1   \n",
-       "491                  0                  0   \n",
-       "492                  0                  0   \n",
-       "493                  1                  0   \n",
+       "487                0.0                1.0   \n",
+       "488                0.0                1.0   \n",
+       "489                0.0                0.0   \n",
+       "490                0.0                1.0   \n",
+       "491                0.0                0.0   \n",
+       "492                0.0                0.0   \n",
+       "493                1.0                0.0   \n",
        "\n",
        "     PaymentMethod_Bank transfer (automatic)  \\\n",
-       "487                                        1   \n",
-       "488                                        1   \n",
-       "489                                        0   \n",
-       "490                                        1   \n",
-       "491                                        0   \n",
-       "492                                        0   \n",
-       "493                                        1   \n",
+       "487                                      1.0   \n",
+       "488                                      1.0   \n",
+       "489                                      0.0   \n",
+       "490                                      1.0   \n",
+       "491                                      0.0   \n",
+       "492                                      0.0   \n",
+       "493                                      1.0   \n",
        "\n",
        "     PaymentMethod_Credit card (automatic)  PaymentMethod_Electronic check  \\\n",
-       "487                                      0                               0   \n",
-       "488                                      0                               0   \n",
-       "489                                      0                               1   \n",
-       "490                                      0                               0   \n",
-       "491                                      0                               1   \n",
-       "492                                      0                               1   \n",
-       "493                                      0                               0   \n",
+       "487                                    0.0                             0.0   \n",
+       "488                                    0.0                             0.0   \n",
+       "489                                    0.0                             1.0   \n",
+       "490                                    0.0                             0.0   \n",
+       "491                                    0.0                             1.0   \n",
+       "492                                    0.0                             1.0   \n",
+       "493                                    0.0                             0.0   \n",
        "\n",
        "     PaymentMethod_Mailed check  Churn  \n",
-       "487                           0      0  \n",
-       "488                           0      0  \n",
-       "489                           0      1  \n",
-       "490                           0      0  \n",
-       "491                           0      0  \n",
-       "492                           0      1  \n",
-       "493                           0      0  \n",
+       "487                         0.0    0.0  \n",
+       "488                         0.0    0.0  \n",
+       "489                         0.0    1.0  \n",
+       "490                         0.0    0.0  \n",
+       "491                         0.0    0.0  \n",
+       "492                         0.0    1.0  \n",
+       "493                         0.0    0.0  \n",
        "\n",
        "[7 rows x 27 columns]"
       ]
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 180,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -416,7 +416,8 @@
     }
    ],
    "source": [
-    "print(telco_data.shape)\n"
+    "print(telco_data.shape)\n",
+    "\n"
    ]
   },
   {
