Working on preprocessor-2

--- a/Offline 1/preprocessor-2.ipynb
+++ b/Offline 1/preprocessor-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 101,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 102,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -46,13 +46,14 @@
     "                         sep=' *, * ',\n",
     "                         engine=\"python\",\n",
     "                         converters={\n",
+    "                            9: lambda x: float(x == 'Male'),\n",
     "                            14: lambda x: float(x == '>50K')\n",
     "                         })"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 103,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -60,12 +61,19 @@
    },
    "outputs": [],
    "source": [
-    "# Preprocessing\n"
+    "# Preprocessing\n",
+    "\n",
+    "# Find out which columns have missing values\n",
+    "all_columns = list(adult_data.columns)\n",
+    "missing_value_columns = []\n",
+    "for column in all_columns:\n",
+    "    if '?' in adult_data[column].values.tolist():\n",
+    "        missing_value_columns.append(column)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 104,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -122,7 +130,7 @@
        "      <td>Adm-clerical</td>\n",
        "      <td>Not-in-family</td>\n",
        "      <td>White</td>\n",
-       "      <td>Male</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>2174</td>\n",
        "      <td>0</td>\n",
        "      <td>40</td>\n",
@@ -140,7 +148,7 @@
        "      <td>Exec-managerial</td>\n",
        "      <td>Husband</td>\n",
        "      <td>White</td>\n",
-       "      <td>Male</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>13</td>\n",
@@ -158,7 +166,7 @@
        "      <td>Handlers-cleaners</td>\n",
        "      <td>Not-in-family</td>\n",
        "      <td>White</td>\n",
-       "      <td>Male</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>40</td>\n",
@@ -176,7 +184,7 @@
        "      <td>Handlers-cleaners</td>\n",
        "      <td>Husband</td>\n",
        "      <td>Black</td>\n",
-       "      <td>Male</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>40</td>\n",
@@ -194,7 +202,7 @@
        "      <td>Prof-specialty</td>\n",
        "      <td>Wife</td>\n",
        "      <td>Black</td>\n",
-       "      <td>Female</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>40</td>\n",
@@ -230,7 +238,7 @@
        "      <td>Tech-support</td>\n",
        "      <td>Wife</td>\n",
        "      <td>White</td>\n",
-       "      <td>Female</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>38</td>\n",
@@ -248,12 +256,12 @@
        "      <td>Machine-op-inspct</td>\n",
        "      <td>Husband</td>\n",
        "      <td>White</td>\n",
-       "      <td>Male</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>40</td>\n",
        "      <td>United-States</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32558</th>\n",
@@ -266,7 +274,7 @@
        "      <td>Adm-clerical</td>\n",
        "      <td>Unmarried</td>\n",
        "      <td>White</td>\n",
-       "      <td>Female</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>40</td>\n",
@@ -284,7 +292,7 @@
        "      <td>Adm-clerical</td>\n",
        "      <td>Own-child</td>\n",
        "      <td>White</td>\n",
-       "      <td>Male</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>20</td>\n",
@@ -302,12 +310,12 @@
        "      <td>Exec-managerial</td>\n",
        "      <td>Wife</td>\n",
        "      <td>White</td>\n",
-       "      <td>Female</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>15024</td>\n",
        "      <td>0</td>\n",
        "      <td>40</td>\n",
        "      <td>United-States</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -315,44 +323,44 @@
        "</div>"
       ],
       "text/plain": [
-       "       0                  1       2            3   4                    5   \\\n",
-       "0      39          State-gov   77516    Bachelors  13        Never-married   \n",
-       "1      50   Self-emp-not-inc   83311    Bachelors  13   Married-civ-spouse   \n",
-       "2      38            Private  215646      HS-grad   9             Divorced   \n",
-       "3      53            Private  234721         11th   7   Married-civ-spouse   \n",
-       "4      28            Private  338409    Bachelors  13   Married-civ-spouse   \n",
-       "...    ..                ...     ...          ...  ..                  ...   \n",
-       "32556  27            Private  257302   Assoc-acdm  12   Married-civ-spouse   \n",
-       "32557  40            Private  154374      HS-grad   9   Married-civ-spouse   \n",
-       "32558  58            Private  151910      HS-grad   9              Widowed   \n",
-       "32559  22            Private  201490      HS-grad   9        Never-married   \n",
-       "32560  52       Self-emp-inc  287927      HS-grad   9   Married-civ-spouse   \n",
+       "       0                 1       2           3   4                   5   \\\n",
+       "0      39         State-gov   77516   Bachelors  13       Never-married   \n",
+       "1      50  Self-emp-not-inc   83311   Bachelors  13  Married-civ-spouse   \n",
+       "2      38           Private  215646     HS-grad   9            Divorced   \n",
+       "3      53           Private  234721        11th   7  Married-civ-spouse   \n",
+       "4      28           Private  338409   Bachelors  13  Married-civ-spouse   \n",
+       "...    ..               ...     ...         ...  ..                 ...   \n",
+       "32556  27           Private  257302  Assoc-acdm  12  Married-civ-spouse   \n",
+       "32557  40           Private  154374     HS-grad   9  Married-civ-spouse   \n",
+       "32558  58           Private  151910     HS-grad   9             Widowed   \n",
+       "32559  22           Private  201490     HS-grad   9       Never-married   \n",
+       "32560  52      Self-emp-inc  287927     HS-grad   9  Married-civ-spouse   \n",
        "\n",
-       "                       6               7       8        9      10  11  12  \\\n",
-       "0            Adm-clerical   Not-in-family   White     Male   2174   0  40   \n",
-       "1         Exec-managerial         Husband   White     Male      0   0  13   \n",
-       "2       Handlers-cleaners   Not-in-family   White     Male      0   0  40   \n",
-       "3       Handlers-cleaners         Husband   Black     Male      0   0  40   \n",
-       "4          Prof-specialty            Wife   Black   Female      0   0  40   \n",
-       "...                   ...             ...     ...      ...    ...  ..  ..   \n",
-       "32556        Tech-support            Wife   White   Female      0   0  38   \n",
-       "32557   Machine-op-inspct         Husband   White     Male      0   0  40   \n",
-       "32558        Adm-clerical       Unmarried   White   Female      0   0  40   \n",
-       "32559        Adm-clerical       Own-child   White     Male      0   0  20   \n",
-       "32560     Exec-managerial            Wife   White   Female  15024   0  40   \n",
+       "                      6              7      8    9      10  11  12  \\\n",
+       "0           Adm-clerical  Not-in-family  White  1.0   2174   0  40   \n",
+       "1        Exec-managerial        Husband  White  1.0      0   0  13   \n",
+       "2      Handlers-cleaners  Not-in-family  White  1.0      0   0  40   \n",
+       "3      Handlers-cleaners        Husband  Black  1.0      0   0  40   \n",
+       "4         Prof-specialty           Wife  Black  0.0      0   0  40   \n",
+       "...                  ...            ...    ...  ...    ...  ..  ..   \n",
+       "32556       Tech-support           Wife  White  0.0      0   0  38   \n",
+       "32557  Machine-op-inspct        Husband  White  1.0      0   0  40   \n",
+       "32558       Adm-clerical      Unmarried  White  0.0      0   0  40   \n",
+       "32559       Adm-clerical      Own-child  White  1.0      0   0  20   \n",
+       "32560    Exec-managerial           Wife  White  0.0  15024   0  40   \n",
        "\n",
-       "                   13   14  \n",
-       "0       United-States  0.0  \n",
-       "1       United-States  0.0  \n",
-       "2       United-States  0.0  \n",
-       "3       United-States  0.0  \n",
-       "4                Cuba  0.0  \n",
-       "...               ...  ...  \n",
-       "32556   United-States  0.0  \n",
-       "32557   United-States  0.0  \n",
-       "32558   United-States  0.0  \n",
-       "32559   United-States  0.0  \n",
-       "32560   United-States  0.0  \n",
+       "                  13   14  \n",
+       "0      United-States  0.0  \n",
+       "1      United-States  0.0  \n",
+       "2      United-States  0.0  \n",
+       "3      United-States  0.0  \n",
+       "4               Cuba  0.0  \n",
+       "...              ...  ...  \n",
+       "32556  United-States  0.0  \n",
+       "32557  United-States  1.0  \n",
+       "32558  United-States  0.0  \n",
+       "32559  United-States  0.0  \n",
+       "32560  United-States  1.0  \n",
        "\n",
        "[32561 rows x 15 columns]"
       ]
@@ -362,12 +370,13 @@
     }
    ],
    "source": [
-    "display(adult_data)"
+    "display(adult_data)\n",
+    "adult_data.to_csv('adult-data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 105,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -378,20 +387,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(32560, 15)\n"
+      "(32561, 15)\n"
      ]
     }
    ],
    "source": [
-    "print(adult_data.shape)\n"
+    "print(adult_data.shape)\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
